--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -18,7 +18,7 @@
 # Your PowerFolder Team
 # http://www.powerfolder.com
 #
-
+quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
