#586, (#576) Statistics are only accurate for non-swarming downloads. Added messages "Delta sync" and "Verifying"

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -902,7 +902,6 @@ transfer.problem.transfer.exception=There was a TransferException\: {0}
 transfers.completed=completed
 transfers.eta=ETA
 transfers.from=From
-transfers.hashing=Hashing
 transfers.kbs={0} KB/s
 transfers.local=local
 transfers.pending=Pending
@@ -999,3 +998,7 @@ wizard.whattodo.title=What do you want to do ?
 
 preferences.dialog.deltasync=Use delta sync
 preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
+
+transfers.hashing=Delta sync
+transfers.remotehashing=Waiting for requests
+transfers.verifying=Verifying sync
