--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -167,7 +167,7 @@ disablesilentmode.name=Wakeup\!
 downloadfile.description=Download selected file(s) (or files in directory). Deleted files will be re-downloaded
 downloadfile.failed.sourcenotfound=Unable to download file {0}, source not found
 downloadfile.key=D
-downloadfile.name=Download file(s)
+downloadfile.name=Download File(s)
 downloadfile.unable_to_download=Unable to download
 
 empty_recycle_bin.description=Empty the PowerFolder Recycle Bin
@@ -314,20 +314,26 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 folderpanel.hometab.choose_local_folder.title=Choose local folder
 folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 folderpanel.hometab.confirm_local_folder_move.title=Move local folder
-folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.local_folder_location=Local folder location
 folderpanel.hometab.local_size=Local size
 folderpanel.hometab.number_of_available_files_at_other_members=Number of available files at other members
 folderpanel.hometab.number_of_local_files_in_folder=Number of local files in folder
 folderpanel.hometab.public_folder=Public
 folderpanel.hometab.secret_folder=Secret
-folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
 folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_size=Total size
 folderpanel.hometab.move_content.title=Move folder contents
 folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
+folderpanel.hometab.move_error.title=Error moving folder contents
+folderpanel.hometab.move_error.temp=Could not create temporary folder
+folderpanel.hometab.move_error.other=There was an error moving the folder:\n{0}
+folderpanel.hometab.move_error.other_temp=There was an error moving the folder:\n{0}\n\nSome of your files may be in\n{1}
+folderpanel.hometab.working.title=Moving folder
+folderpanel.hometab.working.description=The folder is being moved
+folderpanel.hometab.folder_not_empty.title=Folder not empty
+folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
 folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
