#567  * Now displays a dialog with check box for deleting .PowerFolder dir.  * Adjusted and checked related test.  * Fix occasional null pointer in TransferTableCellRenderer for null folders.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -299,10 +299,12 @@ folderjoin.warning.notempty.title=Local base directory not empty
 
 folderleave.description=Leave this folder (Stop Sharing and downloading data)
 folderleave.dialog.sync_warning=The folder is currently synchronizing\!
-folderleave.dialog.text=Leave folder {0} ?
-folderleave.dialog.title=Leave folder {0} ?
+folderleave.dialog.text=Leave folder {0}?
+folderleave.dialog.title=Leave folder {0}?
+folderleave.dialog.delete=Delete meta-data
 folderleave.key=L
 folderleave.name=Leave Folder
+
 
 foldermove.progress.text=Moving folder '{0}'
 foldermove.progress.title=Folder Move
