Changed TransferStates to enums... (and added a state)

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1010,3 +1010,4 @@ preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
 transfers.hashing=Delta sync
 transfers.remotehashing=Waiting for requests
 transfers.verifying=Verifying sync
+transfers.copying=Copying data
