--- a/src/test-resources/ControllerHomer.config
+++ b/src/test-resources/ControllerHomer.config
@@ -1,11 +1,11 @@
 #PowerFolder config file (v0.9.3 devel)
 #Mon Apr 17 00:47:18 CEST 2006
-nodeid=randomstringBart
+nodeid=randomstringHomer
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
-nick=Bart
+nick=Homer
 random-port=false
-port=3457
+port=8835
 verbose=true
 disableui=true
 uploadlimit=0
