--- a/src/test-resources/ControllerMaggie.config
+++ b/src/test-resources/ControllerMaggie.config
@@ -1,14 +1,12 @@
 #PowerFolder config file (v0.9.3 devel)
-#Mon Apr 17 00:47:19 CEST 2006
-nodeid=randomstringLisa
+#Mon Apr 17 00:47:18 CEST 2006
+nodeid=randomstringMaggie
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
-nick=Lisa
+nick=Maggie
+random-port=true
+verbose=true
 disableui=true
 uploadlimit=0
-port=1154
-random-port=false
-verbose=true
 disablebroadcasts=true
-disablercon=true
 networkingmode=LANONLYMODE
