--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -18,6 +18,8 @@
 # Your PowerFolder Team
 # http://www.powerfolder.com
 #
+
+preferences.dialog.deleteemptydirs=Delete empty directories
 quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 abortcopy.description=Abort the copy process
 abortcopy.key=A
