#353  * Change SyncProfile to allow for Custom Profile type.  * Store sync profiles as internal configuration form, not id. Backward-compatible with old versions.  * Changed minimum minutes between scan to 0 (not -1). This allows for minutes to be set as zero or more by spinner model.  * Change selection to allow user to select a default and then configure as required.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -107,7 +107,7 @@ connect.name=Connect
 console.updatecheck.new_developmentversion=------------ New development version downloaded ------------
 
 createshortcut.description=Creates a shortcut to this folder on your desktop
-createshortcut.key=C
+createshortcut.key=D
 createshortcut.name=Create desktop shortcut
 
 delete_confimation.busy.description=Removing file(s)
@@ -139,6 +139,14 @@ dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
+dialog.customsync.title=Choose synchronisation profile
+dialog.customsync.text=Select default and / or customize synchronization profile
+dialog.customsync.syncprofilescombo=Default synchronization profile
+dialog.customsync.autodownloadfromfriends=Autodownload from friends
+dialog.customsync.autodownloadfromother=Autodownload from others
+dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
+dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
+dialog.customsync.minutesbetweenscans=Minutes between scans 
 dialog.fatalerror.title=Fatal Error
 dialog.synchronization.choose=Please choose your sync action on
 dialog.synchronization.receive_changes=Receive changes
@@ -265,7 +273,7 @@ foldercreate.dialog.backuperror.title=Unable to backup folder
 foldercreate.dialog.saveinvitation=Save an invitation in the folder
 foldercreate.dialog.sendinvitation=Send invitations afterwards
 foldercreate.dialog.settings=Enter the settings for the new shared folder
-foldercreate.dialog.title=Create new Folder
+foldercreate.dialog.title=Create new folder
 foldercreate.dirempty.text=Base directory of folder should not be empty
 foldercreate.dirempty.title=Folder base directory required
 foldercreate.error.already_taken=Base directory already taken by folder '{0}'\n'{1}'
@@ -861,7 +869,7 @@ syncprofile.autodownload_all.name=Auto-download (everything)
 syncprofile.autodownload_friends.name=Auto-download (from friends)
 syncprofile.backupsource.name=Backup (Source)
 syncprofile.backuptarget.name=Backup (Target)
-syncprofile.custom.name=Custom...
+syncprofile.custom.name=Custom profile
 syncprofile.leecher.name=Torrent downloader
 syncprofile.leechreleaser.name=Torrent releaser
 syncprofile.manualdownload.name=Manual download
