#353 - better scan text

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -146,7 +146,7 @@ dialog.customsync.autodownloadfromfriends=Autodownload from friends
 dialog.customsync.autodownloadfromother=Autodownload from others
 dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
-dialog.customsync.minutesbetweenscans=Minutes between scans 
+dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
 dialog.fatalerror.title=Fatal Error
 dialog.synchronization.choose=Please choose your sync action on
 dialog.synchronization.receive_changes=Receive changes
