Improving test infrastructure

--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -9,6 +9,7 @@ port=3457
 verbose=true
 disableui=true
 uploadlimit=0
+disablercon=true
 disablebroadcasts=true
 networkingmode=LANONLYMODE
 mydyndns=localhost
