--- a/src/test-resources/ControllerHomer.config
+++ b/src/test-resources/ControllerHomer.config
@@ -8,6 +8,7 @@ random-port=false
 port=8835
 verbose=true
 disableui=true
+disablercon=true
 uploadlimit=0
 disablebroadcasts=true
 networkingmode=LANONLYMODE
