#353 - restore dropdown on selector panel

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -25,7 +25,7 @@ abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
 
-abortdownload.description=Aborts the selected downloads and removed them from the download queue
+abortdownload.description=Aborts the selected downloads and removes them from the download queue
 abortdownload.key=a
 abortdownload.name=Abort
 
@@ -148,7 +148,7 @@ dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
 dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
 dialog.fatalerror.title=Fatal Error
-dialog.synchronization.choose=Please choose your sync action on
+dialog.synchronization.choose=Please choose your sync action
 dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Publish and receive changes
 dialog.synchronization.send_own_changes=Publish own changes
