--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -8,7 +8,7 @@
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our official webpage under
+# There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -19,8 +19,6 @@
 # http://www.powerfolder.com
 #
 
-preferences.dialog.deleteemptydirs=Delete empty directories
-quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -139,14 +137,14 @@ dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
-dialog.customsync.title=Choose synchronisation profile
-dialog.customsync.text=Select default and / or customize synchronization profile
-dialog.customsync.syncprofilescombo=Default synchronization profile
 dialog.customsync.autodownloadfromfriends=Autodownload from friends
 dialog.customsync.autodownloadfromother=Autodownload from others
+dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
 dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
-dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+dialog.customsync.syncprofilescombo=Default synchronization profile
+dialog.customsync.text=Select default and / or customize synchronization profile
+dialog.customsync.title=Choose synchronisation profile
 dialog.fatalerror.title=Fatal Error
 dialog.synchronization.choose=Please choose your sync action
 dialog.synchronization.receive_changes=Receive changes
@@ -307,13 +305,12 @@ folderjoin.warning.notempty.text=The directory for the local copy of folder '{0}
 folderjoin.warning.notempty.title=Local base directory not empty
 
 folderleave.description=Leave this folder (Stop Sharing and downloading data)
+folderleave.dialog.delete=Delete meta-data
 folderleave.dialog.sync_warning=The folder is currently synchronizing\!
 folderleave.dialog.text=Leave folder {0}?
 folderleave.dialog.title=Leave folder {0}?
-folderleave.dialog.delete=Delete meta-data
 folderleave.key=L
 folderleave.name=Leave Folder
-
 
 foldermove.progress.text=Moving folder '{0}'
 foldermove.progress.title=Folder Move
@@ -325,8 +322,16 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 folderpanel.hometab.choose_local_folder.title=Choose local folder
 folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
 folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
+folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Local folder location
 folderpanel.hometab.local_size=Local size
+folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
+folderpanel.hometab.move_content.title=Move folder contents
+folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
+folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
+folderpanel.hometab.move_error.temp=Could not create temporary folder
+folderpanel.hometab.move_error.title=Error moving folder contents
 folderpanel.hometab.number_of_available_files_at_other_members=Number of available files at other members
 folderpanel.hometab.number_of_local_files_in_folder=Number of local files in folder
 folderpanel.hometab.public_folder=Public
@@ -335,16 +340,8 @@ folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_size=Total size
-folderpanel.hometab.move_content.title=Move folder contents
-folderpanel.hometab.move_content=Will you want to move the contents of the current folder to the new folder?
-folderpanel.hometab.move_error.title=Error moving folder contents
-folderpanel.hometab.move_error.temp=Could not create temporary folder
-folderpanel.hometab.move_error.other=There was an error moving the folder:\n{0}
-folderpanel.hometab.move_error.other_temp=There was an error moving the folder:\n{0}\n\nSome of your files may be in\n{1}
-folderpanel.hometab.working.title=Moving folder
 folderpanel.hometab.working.description=The folder is being moved
-folderpanel.hometab.folder_not_empty.title=Folder not empty
-folderpanel.hometab.folder_not_empty=Folder {0} is not empty.\nDo you want to continue?
+folderpanel.hometab.working.title=Moving folder
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
 folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
@@ -434,11 +431,11 @@ general.synchonisation=Synchronisation
 general.syncprofile=Sync profile
 general.time=%02d\:%02d\:%02d
 general.today=today
+general.transfer.problem=Transfer Problem
+general.transfer.problems=Transfer Problems
 general.uploads=Uploads
 general.user=User
 general.visibility=Visibility
-general.transfer.problems=Transfer Problems
-general.transfer.problem=Transfer Problem
 general.webservice=Online Storage
 general.yesterday=yesterday
 
@@ -610,6 +607,9 @@ preferences.dialog.bindDescr=Interface description
 preferences.dialog.colortheme=Color theme
 preferences.dialog.createdesktopshortcuts=Create desktop shortcuts
 preferences.dialog.debugReports=Enable debug reports
+preferences.dialog.deleteemptydirs=Delete empty directories
+preferences.dialog.deltasync=Use delta sync
+preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogs
@@ -727,6 +727,7 @@ publicfolders.size=Size
 quickinfo.download.active={0} active download(s)
 quickinfo.download.completed={0} download(s) recently completed
 quickinfo.download.title=Download Status
+quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder is in sync
 quickinfo.folder.is_synchronizing=Folder is synchronizing...
 quickinfo.folder.number_of_files_and_size={0} File(s), {1}
@@ -746,8 +747,8 @@ quickinfo.root.insync=All Folders are synchronized
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sync in progress...
 quickinfo.root.title=Welcome to PowerFolder\!
-quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.transfer.problems.detected={0} problem(s) recently detected
+quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} active upload(s)
 quickinfo.upload.title=Upload Status
 quickinfo.user.isconnectedinet=Is on the Internet
@@ -917,16 +918,20 @@ transfer.problem.title=File Transfer Problem
 transfer.problem.transfer.exception=There was a TransferException\: {0}
 
 transfers.completed=completed
+transfers.copying=Copying data
 transfers.eta=ETA
 transfers.from=From
+transfers.hashing=Delta sync
 transfers.kbs={0} KB/s
 transfers.local=local
 transfers.pending=Pending
 transfers.progress=Progress
 transfers.queued=queued
+transfers.remotehashing=Waiting for requests
 transfers.requested=requested
 transfers.searching=Searching...
 transfers.to=To
+transfers.verifying=Verifying sync
 
 unignorefile.description=File(s) will be downloaded/shared again
 unignorefile.key=U
@@ -999,7 +1004,7 @@ wizard.syncpcspanel.setup=Setup a new mirror
 wizard.syncpcspanel.takepart=Take part in a mirror
 wizard.syncpcspanel.title=Mirror
 wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
-wizard.webservice.learnmore=What is the PowerFolder WebService?
+wizard.webservice.learnmore=What is the PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
 wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
 wizard.webservice.mirrorsetup=Backup Folder by Online Storage
@@ -1012,11 +1017,3 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=What do you want to do ?
-
-preferences.dialog.deltasync=Use delta sync
-preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
-
-transfers.hashing=Delta sync
-transfers.remotehashing=Waiting for requests
-transfers.verifying=Verifying sync
-transfers.copying=Copying data
