--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,8 @@
 # http://www.powerfolder.com
 #
 
+dialog.customsync.changedetection_disabled=Change detection disabled
+general.whatisthis=What is this?
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
