#145 - first attempt at custom directory choose dialog

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -136,12 +136,20 @@ dialog.alreadyrunning.startbutton=Start anyways
 dialog.alreadyrunning.title=Already running
 dialog.alreadyrunning.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
 dialog.binderror=Unable to bind port\!
+dialog.directorychooser.title=Select directory
+dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+dialog.directorychooser.new.name=New
+dialog.directorychooser.new.key=N
+dialog.directorychooser.new.description=New directory
+dialog.directorychooser.new.exists={0}\nalready exists
+dialog.directorychooser.new.problem=There was a problem creating\n{0}
+dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
 dialog.customsync.autodownloadfromfriends=Autodownload from friends
 dialog.customsync.autodownloadfromother=Autodownload from others
-dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection
 dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
 dialog.customsync.syncprofilescombo=Default synchronization profile
@@ -169,7 +177,7 @@ dialog.updatecheck.nothingNeverAsk=Nothing and Never ask again
 dialog.updatecheck.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
 dialog.updatecheck.title=Newer version available
 
-disablesilentmode.description=Siletmode currently active, added/modified files won't be found. Press to full mode
+disablesilentmode.description=Silent mode currently active, added/modified files won't be found. Press for full mode
 disablesilentmode.key=w
 disablesilentmode.name=Wakeup\!
 
@@ -397,6 +405,7 @@ general.cancel=Cancel
 general.cancel.key=C
 general.days={0} days
 general.description=Description
+general.directory=Directory
 general.disconnected=Disconnected
 general.downloads=Downloads
 general.estimatedsize=Estimated size
