--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -877,8 +877,7 @@ synchronisation.warning.automatic_download=This mode will automatically download
 synchronisation.warning.explanation=You have selected synchronisation profile '{0}' for folder {1}.
 synchronisation.warning.title=Activate synchronisation profile {0} for {1}
 
-syncprofile.autodownload_all.name=Auto-download (everything)
-syncprofile.autodownload_friends.name=Auto-download (from friends)
+syncprofile.autodownload_all.name=Auto-download
 syncprofile.backupsource.name=Backup (Source)
 syncprofile.backuptarget.name=Backup (Target)
 syncprofile.custom.name=Custom profile
