syntax error corrected

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -921,7 +921,7 @@ transfer.problem.invalid.part=Received invalid part request\: {0}
 transfer.problem.io.exception=Unable to read/write\: {0}
 transfer.problem.md5.error=There was an MD5-Hash error
 transfer.problem.old.upload=Already received download request from {0}
-transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
+transfer.problem.temp.file.delete=Unable to remove broken tempfile {0}
 transfer.problem.temp.file.open=Unable to create/open tempfile {0}
 transfer.problem.temp.file.write=Unable to write to tempfile {0}
 transfer.problem.title=File Transfer Problem
