Ticket #607 Downloads table: Mark updated files with status "Updated" instead of "Completed" By Jay. I can only change text in these two languages.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -927,7 +927,7 @@ transfer.problem.temp.file.write=Unable to write to tempfile {0}
 transfer.problem.title=File Transfer Problem
 transfer.problem.transfer.exception=There was a TransferException\: {0}
 
-transfers.completed=completed
+transfers.completed=Updated
 transfers.copying=Copying data
 transfers.eta=ETA
 transfers.from=From
