#608 - allow overview, myFolders or downloads to be the initial selection

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -8,7 +8,7 @@
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our offical webpage under
+# There is also a guide on our official webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -348,6 +348,8 @@ folderpanel.hometab.public_folder=Public
 folderpanel.hometab.secret_folder=Secret
 folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
+folderpanel.hometab.online_storage_percentage=Online storage percentage
+folderpanel.hometab.not_mirrored=Not mirrored yet.
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_size=Total size
 folderpanel.hometab.working.description=The folder is being moved
@@ -390,7 +392,7 @@ friendsearch.nodetable.hostname=Hostname
 friendsearch.nodetable.ip=IP
 friendsearch.nodetable.last_seen_online=Last seen online
 friendsearch.nodetable.name=Name
-friendsearch.nodetable.on_local_network=On Lan
+friendsearch.nodetable.on_local_network=On LAN
 
 friendspanel.connected=Connected
 friendspanel.currently_online=Currently online
@@ -616,6 +618,10 @@ preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=Select the address PowerFolder should use
 preferences.dialog.bindDescr=Interface description
 preferences.dialog.colortheme=Color theme
+preferences.dialog.startPanel=Start panel
+preferences.dialog.startPanel.overview=Overview
+preferences.dialog.startPanel.myFolders=My Folders
+preferences.dialog.startPanel.downloads=Downloads
 preferences.dialog.createdesktopshortcuts=Create desktop shortcuts
 preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.deleteemptydirs=Delete empty directories
