--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,7 @@
 # http://www.powerfolder.com
 #
 
+quickinfo.folder.disconnected=No other computer connected
 dialog.customsync.changedetection_disabled=Change detection disabled
 general.whatisthis=What is this?
 abortcopy.description=Abort the copy process
