--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -9,7 +9,7 @@ clearrecentdownloads.icon=icons/Clear.gif
 #disablesilentmode.icon=icons/ScansDisabled.gif
 #enablesilentmode.icon=icons/SyncMode.gif
 #scanfolder.icon=icons/FileList.gif
-foldercreate.icon=icons/FolderCreate.gif
+#foldercreate.icon=icons/FolderCreate.gif
 #preferences.icon=icons/Settings.gif
 #preferences.dialog.icon=icons/Settings.gif
 #about.icon=icons/PowerFolder.gif
