#514 - improvements to online storage display in lan mode

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -775,6 +775,7 @@ quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
 quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
 quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
 quickinfo.webservice.notsetup=Online Storage not configured yet
+quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
 quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=Reconnects to this user now
