#625 - remove file info from temp file transfer problems (display too long).

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -197,7 +197,7 @@ empty_recycle_bin.working.title=Emptying the Recycle Bin
 empty_recycle_bin_confimation.text=Are your sure to want to empty the PowerFolder Recycle Bin?
 empty_recycle_bin_confimation.title=Empty PowerFolder Recycle Bin
 
-enablesilentmode.description=Disables all heavy tasks, e.g. scanning for changes in folders, no disk activity then
+enablesilentmode.description=Disables all heavy tasks, e.g. scanning for changes in folders, thus no disk activity
 enablesilentmode.key=s
 enablesilentmode.name=Run Silently
 
@@ -923,13 +923,13 @@ transfer.problem.broken.upload=The transfer upload was broken
 transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
 transfer.problem.general.exception=There was an Exception\: {0}
 transfer.problem.illegal.chunk=Received illegal chunk\: {0}
-transfer.problem.invalid.part=Received invalid part request\: {0}
+transfer.problem.invalid.part=Received invalid part request
 transfer.problem.io.exception=Unable to read/write\: {0}
 transfer.problem.md5.error=There was an MD5-Hash error
 transfer.problem.old.upload=Already received download request from {0}
-transfer.problem.temp.file.delete=Unable to remove broken tempfile {0}
-transfer.problem.temp.file.open=Unable to create/open tempfile {0}
-transfer.problem.temp.file.write=Unable to write to tempfile {0}
+transfer.problem.temp.file.delete=Unable to remove broken tempfile
+transfer.problem.temp.file.open=Unable to create/open tempfile
+transfer.problem.temp.file.write=Unable to write to tempfile
 transfer.problem.title=File Transfer Problem
 transfer.problem.transfer.exception=There was a TransferException\: {0}
 
