--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -933,21 +933,21 @@ transfer.problem.temp.file.write=Unable to write to tempfile
 transfer.problem.title=File Transfer Problem
 transfer.problem.transfer.exception=There was a TransferException\: {0}
 
-transfers.completed=Updated
+transfers.completed=Completed
 transfers.copying=Copying data
 transfers.eta=ETA
 transfers.from=From
-transfers.hashing=Delta sync
+transfers.hashing=Preparing
 transfers.kbs={0} KB/s
 transfers.local=local
 transfers.pending=Pending
 transfers.progress=Progress
-transfers.queued=queued
-transfers.remotehashing=Waiting for requests
-transfers.requested=requested
+transfers.queued=Queued
+transfers.remotehashing=Preparing
+transfers.requested=Requested
 transfers.searching=Searching...
 transfers.to=To
-transfers.verifying=Verifying sync
+transfers.verifying=Finalizing
 
 unignorefile.description=File(s) will be downloaded/shared again
 unignorefile.key=U
@@ -1005,6 +1005,8 @@ wizard.sendinvitations.sendinvitation=Send invitation
 wizard.sendinvitations.sendsuccess=Invitation sent
 wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
 wizard.sendinvitations.title=Save invitation
+wizard.sendinvitations.invitationtext=Enter a message for the receiver
+wizard.sendinvitations.invitationtextsample=
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Enter your (dynamic) dns
 wizard.setupdns.improvesread=It improves your reachability. However this is not required
