- Cleanups - Added ger translations

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -8,7 +8,7 @@
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our official webpage under
+# There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -19,9 +19,6 @@
 # http://www.powerfolder.com
 #
 
-quickinfo.folder.disconnected=No other computer connected
-dialog.customsync.changedetection_disabled=Change detection disabled
-general.whatisthis=What is this?
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -137,26 +134,27 @@ dialog.alreadyrunning.startbutton=Start anyways
 dialog.alreadyrunning.title=Already running
 dialog.alreadyrunning.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
 dialog.binderror=Unable to bind port\!
-dialog.directorychooser.title=Select directory
-dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
-dialog.directorychooser.new.name=New
-dialog.directorychooser.new.key=N
-dialog.directorychooser.new.description=New directory
-dialog.directorychooser.new.exists={0}\nalready exists
-dialog.directorychooser.new.problem=There was a problem creating\n{0}
-dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
 dialog.customsync.autodownloadfromfriends=Autodownload from friends
 dialog.customsync.autodownloadfromother=Autodownload from others
+dialog.customsync.changedetection_disabled=Change detection disabled
 dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection
 dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
 dialog.customsync.syncprofilescombo=Default synchronization profile
 dialog.customsync.text=Select default and / or customize synchronization profile
 dialog.customsync.title=Choose synchronisation profile
+dialog.directorychooser.new.description=New directory
+dialog.directorychooser.new.exists={0}\nalready exists
+dialog.directorychooser.new.key=N
+dialog.directorychooser.new.name=New
+dialog.directorychooser.new.problem=There was a problem creating\n{0}
+dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=Fatal Error
+dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.synchronization.choose=Please choose your sync action
 dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Publish and receive changes
@@ -167,8 +165,6 @@ dialog.unable_to_connect_to_address=Unable to connect to {0}
 dialog.unable_to_connect_to_member=Unable to connect to {0}
 dialog.unable_to_open_port=Unable to open on local port {0}, maybe PowerFolder is already running
 dialog.updatecheck.developmentversion.optionrestart=Restart
-dialog.updatecheck.developmentversion.text=\nA new development version of PowerFolder has been downloaded.\n\n - Buildtimes -\nThis version\: {0}\nNew version\: {1}\n\nPlease restart PowerFolder now.\n
-dialog.updatecheck.developmentversion.title=New development version
 dialog.updatecheck.downloadAndUpdate=Download and Update now
 dialog.updatecheck.failed.text=Update failed. Please check your internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
 dialog.updatecheck.failed.title=Update failed
@@ -443,12 +439,11 @@ general.synchonisation=Synchronisation
 general.syncprofile=Sync profile
 general.time=%02d\:%02d\:%02d
 general.today=today
-general.transfer.problem=Transfer Problem
-general.transfer.problems=Transfer Problems
 general.uploads=Uploads
 general.user=User
 general.visibility=Visibility
 general.webservice=Online Storage
+general.whatisthis=What is this?
 general.yesterday=yesterday
 
 hideoffline.description=The offline users will be filtered from this search result
@@ -617,10 +612,6 @@ preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=Select the address PowerFolder should use
 preferences.dialog.bindDescr=Interface description
 preferences.dialog.colortheme=Color theme
-preferences.dialog.startPanel=Start panel
-preferences.dialog.startPanel.overview=Overview
-preferences.dialog.startPanel.myFolders=My Folders
-preferences.dialog.startPanel.downloads=Downloads
 preferences.dialog.createdesktopshortcuts=Create desktop shortcuts
 preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.deleteemptydirs=Delete empty directories
@@ -685,6 +676,10 @@ preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image p
 preferences.dialog.silentthrottle=Silentmode bandwidth throttle
 preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 preferences.dialog.smalltoolbar=Use small toolbar icons
+preferences.dialog.startPanel=Start panel
+preferences.dialog.startPanel.downloads=Downloads
+preferences.dialog.startPanel.myFolders=My Folders
+preferences.dialog.startPanel.overview=Overview
 preferences.dialog.startwithwindows=Start PowerFolder with Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: cannot be resolved\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} validated successfully\!
@@ -743,6 +738,7 @@ publicfolders.size=Size
 quickinfo.download.active={0} active download(s)
 quickinfo.download.completed={0} download(s) recently completed
 quickinfo.download.title=Download Status
+quickinfo.folder.disconnected=No other computer connected
 quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder is in sync
 quickinfo.folder.is_synchronizing=Folder is synchronizing...
@@ -763,8 +759,6 @@ quickinfo.root.insync=All Folders are synchronized
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sync in progress...
 quickinfo.root.title=Welcome to PowerFolder\!
-quickinfo.transfer.problems.detected={0} problem(s) recently detected
-quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} active upload(s)
 quickinfo.upload.title=Upload Status
 quickinfo.user.isconnectedinet=Is on the Internet
@@ -773,9 +767,9 @@ quickinfo.user.isdiconnected=Is disconnected
 quickinfo.user.secureconnected=securely connected
 quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
 quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
+quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
 quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
 quickinfo.webservice.notsetup=Online Storage not configured yet
-quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
 quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=Reconnects to this user now
@@ -879,7 +873,6 @@ statusbar.synchronizing=Synchronizing...
 synchronisation.notice.title=Activated synchronisation profile {0}
 synchronisation.warning.automatic_deletions=This mode will also synchronize file deletions\!\nContinue?
 synchronisation.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
-synchronisation.warning.automatic_download=This mode will automatically download files\!\nContinue?
 synchronisation.warning.explanation=You have selected synchronisation profile '{0}' for folder {1}.
 synchronisation.warning.title=Activate synchronisation profile {0} for {1}
 
@@ -887,10 +880,8 @@ syncprofile.autodownload_all.name=Auto-download
 syncprofile.backupsource.name=Backup (Source)
 syncprofile.backuptarget.name=Backup (Target)
 syncprofile.custom.name=Custom profile
-syncprofile.leecher.name=Torrent downloader
-syncprofile.leechreleaser.name=Torrent releaser
-syncprofile.manualdownload.name=Manual download
-syncprofile.projectwork.name=Project work
+syncprofile.manualdownload.name=Hosting (Manual download)
+syncprofile.projectwork.name=Project work (Manual Sync)
 syncprofile.syncpcs.name=Mirror
 
 systemservice.options.info1=Use these options install/uninstall
@@ -995,6 +986,8 @@ wizard.projectsync.successjoin=You have successfully joined the project\!
 wizard.projectsync.takepartsync=Take part in a synchronisation
 wizard.projectsync.title=Project synchronization
 wizard.sendinvitations.additionaltext=Additional Information
+wizard.sendinvitations.invitationtext=Enter a message for the receiver
+wizard.sendinvitations.invitationtextsample=
 wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 wizard.sendinvitations.neveruntrusted=Never give out invitation files to untrusted people.
 wizard.sendinvitations.offline=Not connected
@@ -1005,8 +998,6 @@ wizard.sendinvitations.sendinvitation=Send invitation
 wizard.sendinvitations.sendsuccess=Invitation sent
 wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
 wizard.sendinvitations.title=Save invitation
-wizard.sendinvitations.invitationtext=Enter a message for the receiver
-wizard.sendinvitations.invitationtextsample=
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Enter your (dynamic) dns
 wizard.setupdns.improvesread=It improves your reachability. However this is not required
