--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,7 @@
 # http://www.powerfolder.com
 #
 
+folderjoin.invitationtext=Message
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -424,7 +425,7 @@ general.localnet=LAN
 general.member=Member
 general.notavailable=not available
 general.notfound=not found
-general.notonfriends=Not on Friendlist
+general.notonfriends=Find user
 general.ok=OK
 general.ok.key=O
 general.overwrite=Overwrite
