Ticket #414: 1)white background 2)added small logo in the top left corner

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,6 +1,6 @@
 # this file contains the images used in buttons
 
-
+small_logo.icon=icons/PowerFolder_32x32.gif
 startdownloads.icon=icons/Play.gif
 abortdownload.icon=icons/Abort.gif
 clearcompleteddownloads.icon=icons/Clear.gif
