--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -80,7 +80,7 @@ buypro.name=Buy Pro
 
 chat.notification.option1=Answer
 chat.notification.option2=Close
-chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
+chat.notification.subtitle=<html><b>PowerFolder</b><br>New chat message:</html>
 
 chatpanel.cannot_deliver=message can not be delivered because '{0}' is not connected
 chatpanel.chat_with=Chat with
